# OpenDccCLib

./: .gitignore  README.md
applications/ti_theia/: dcc.theia-workspace
applications/ti_theia/mspm03507_launchpad/command_station/: .ccsproject  .cproject  .project  command_station.c  command_station.syscfg  dcc_user_config.h  uart_command_parser.c  uart_command_parser.h
applications/ti_theia/mspm03507_launchpad/decoder/: .ccsproject  .cproject  .project  dcc_user_config.h  decoder.c  decoder.syscfg  decoder_command_parser.c  decoder_command_parser.h
documentation/: ARCHITECTURE.md  ComplianceMatrix.md  Doxyfile  PDF_Regeneration_Guide.md  README.md  STATUS.md  ServiceModeOperationsMatrix.md  TODO.md  generate_docs.py
documentation/archive/: OpenDccCLib_Requirements.md  application_api_refactor.md  compliance_deviation_fixes.md
documentation/compliance/: ComplianceMatrix.md  ComplianceOverview.md  compliance.data.js  detail_s9_2_3_service_mode.md  detail_s9_3_2_railcom.md  index.html  validate_compliance.py
documentation/requirements/: OpenDccCLib_Requirements.md
documentation/specs/: DCC_Draft_Deltas.md  DCC_Spec_Reference.md
documentation/specs/drafts/: DCC_Draft_Spec_Reference.md
documentation/style_guides/: StyleGuide_v4.md
documentation/working_plans/: application_api_refactor.md  railcom_architecture.md
src/: mainpage.h
src/dcc/: CMakeLists.txt  dcc_application_accessory_decoder_railcom.c  dcc_application_accessory_decoder_railcom.h  dcc_application_accessory_decoder_railcom_Test.cxx  dcc_application_command_station_main_track.c  dcc_application_command_station_main_track.h  dcc_application_command_station_main_track_Test.cxx  dcc_application_command_station_packet.c  dcc_application_command_station_packet.h  dcc_application_command_station_packet_Test.cxx  dcc_application_command_station_service_track.c  dcc_application_command_station_service_track.h  dcc_application_command_station_service_track_Test.cxx  dcc_application_decoder_cv.c  dcc_application_decoder_cv.h  dcc_application_decoder_cv_Test.cxx  dcc_application_decoder_railcom.c  dcc_application_decoder_railcom.h  dcc_application_decoder_railcom_Test.cxx  dcc_application_main_track.c  dcc_application_main_track.h  dcc_application_main_track_Test.cxx  dcc_application_main_track_api_Test.cxx  dcc_application_service_track.c  dcc_application_service_track.h  dcc_application_service_track_Test.cxx  dcc_application_service_track_api_Test.cxx  dcc_bit_decoder.c  dcc_bit_decoder.h  dcc_bit_decoder_Test.cxx  dcc_bit_encoder.c  dcc_bit_encoder.h  dcc_bit_encoder_Test.cxx  dcc_config.c  dcc_config.h  dcc_config_Test.cxx  dcc_cv_storage.c  dcc_cv_storage.h  dcc_cv_storage_Test.cxx  dcc_defines.h  (+59 more)
templates/typical/: dcc_user_config.h
test/: CMakeLists.txt  README.md  check_symbol_leakage.sh  dcc_gate_smoke.cxx
test/compliance/: .gitignore  README.md  compliance_lib.py  run_all.py  s9_1_compliance.py  s9_2_1_compliance.py  s9_2_3_compliance.py  s9_2_compliance.py  s9_3_2_compliance.py
test/compliance/accessory_decoder/: HIL_SETUP.md  README.md
test/compliance/command_station/: HIL_SETUP.md  README.md  library_compliance.py  run_all.py  s9_2_1_compliance.py  s9_2_3_compliance.py  s9_2_compliance.py  s9_3_2_compliance.py
test/compliance/command_station/saleae_hil_compliance/: .cproject  dcc_user_config.h  saleae_hil_compliance.c  saleae_hil_compliance.syscfg  uart_command_parser.c
test/compliance/command_station/saleae_hil_compliance/application_drivers/: ti_driverlib_dcc_driver.c  ti_driverlib_uart_driver.h
test/compliance/mobile_decoder/: HIL_SETUP.md  README.md  compliance_lib.py  dcc_encode.py  decoder_smoke.py  s9_1_compliance.py  s9_2_1_compliance.py  s9_2_2_compliance.py  s9_2_4_compliance.py  s9_2_compliance.py  saleae_hil_compliance.theia-workspace  wfplayer.py
test/compliance/mobile_decoder/saleae_hil_compliance/: .project  dcc_user_config.h  decoder.c  decoder.syscfg
test/compliance/mobile_decoder/saleae_hil_compliance/.theia/: launch.json
test/compliance/mobile_decoder/saleae_hil_compliance/application_callbacks/: callbacks_dcc.c  callbacks_dcc.h
test/compliance/mobile_decoder/saleae_hil_compliance/application_drivers/: ack_pulse_driver.c  ti_driverlib_dcc_driver.h
test/compliance/mobile_decoder/saleae_hil_compliance/targetConfigs/: MSPM0G3507.ccxml
test/compliance/saleae_hil_waveform_player/: HIL_SETUP.md  IMPLEMENTATION.md  PROTOCOL.md  README.md  SPEC.md  wfplayer.py
test/compliance/saleae_hil_waveform_player/saleae_hil_compliance/: .ccsproject  .cproject  dcc_user_config.h  saleae_hil_compliance.c  saleae_hil_compliance.syscfg  wfplayer_command_parser.c  wfplayer_command_parser.h  wfplayer_engine.c  wfplayer_engine.h
test/compliance/saleae_hil_waveform_player/saleae_hil_compliance/.theia/: launch.json
test/compliance/saleae_hil_waveform_player/saleae_hil_compliance/application_callbacks/: callbacks_dcc.c
test/compliance/saleae_hil_waveform_player/saleae_hil_compliance/application_drivers/: ti_driverlib_dcc_driver.h  ti_driverlib_uart_driver.c
test/compliance/saleae_hil_waveform_player/saleae_hil_compliance/targetConfigs/: MSPM0G3507.ccxml
test/compliance/saleae_hil_waveform_player/test/: test_hw_smoke.py  test_hw_spec.py  test_wfplayer.py
test/compliance/ti_theia/saleae_hil_compliance/: HIL_SETUP.md  dcc_lib  dcc_user_config.h  saleae_hil_compliance.c  saleae_hil_compliance.syscfg  uart_command_parser.c
test/compliance/ti_theia/saleae_hil_compliance/application_callbacks/: callbacks_dcc.c  callbacks_dcc.h
test/compliance/ti_theia/saleae_hil_compliance/application_drivers/: ti_driverlib_dcc_driver.c  ti_driverlib_dcc_driver.h  ti_driverlib_uart_driver.c
test/user_config/accessory/: dcc_user_config.h
test/user_config/accessory_no_railcom/: dcc_user_config.h
test/user_config/command_station/: dcc_user_config.h
test/user_config/command_station_no_railcom/: dcc_user_config.h
test/user_config/decoder/: dcc_user_config.h
test/user_config/decoder_no_railcom/: dcc_user_config.h
test/user_config/typical/: dcc_user_config.h
(+26 files in other folders)
